# cfdns

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/api/: mod.rs
src/cli/: mod.rs
src/commands/: helpers.rs  init.rs  metadata.rs  mod.rs  query.rs  record.rs
src/config/: mod.rs
src/models/: dns_record.rs  error.rs  mod.rs
src/output/: mod.rs
tests/: common.rs  crud_test.rs  list_test.rs  model_test.rs
