[package]
name = "cfdns"
version = "2026.3.16"
edition = "2021"
rust-version = "1.93.1"
description = "A lightweight CLI tool for managing Cloudflare DNS records"
license = "MIT"
repository = "https://github.com/Bonveio/cfdns"
keywords = ["cloudflare", "dns", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json", "tls"] }
thiserror = "1"
toml = "0.8"
dirs = "5"
rpassword = "6"

[build-dependencies]
cc = "1"

[dev-dependencies]
tiny_http = "0.12"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
